@@ -543,6 +543,7 @@ extern char    _additional_info [32];
 	{ \
 		if (_control_mode[axis] != MODE_IDLE && IS_DONE(axis)) \
 		{ \
+			_vel_counter[axis] = 0; \
 			if (_control_mode[axis] == MODE_POSITION) \
 				_desired_vel[axis] = 0; \
 			_control_mode[axis] = MODE_VELOCITY; \
